<resources>
    <string name="app_name">mediTrackProject</string>
    <string name="patientLogin">Patient</string>
    <string name="doctorLogin">Doctor</string>
    <string name="contentDescription">Logo for our App</string>
    <string name="loginTextMiddle">Login</string>
    <string name="wlcTextUnderLogin">Hi, Welcome back🖐</string>
    <string name="email">Email</string>
    <string name="email_hint"> Enter your email</string>
    <string name="passwordString">Password</string>
    <string name="passwordHint">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginButtonText">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an Account?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="title_activity_doctor_login_page">DoctorLoginPage</string>
    <string name="professional_registration_number_scfhs">Professional Registration Number (SCFHS)</string>
    <string name="_00_a_a_000000">00-A-A-000000</string>
    <string name="arrowback">arrowBack</string>
    <string name="forget">Forget</string>
    <string name="password">Password</string>
    <string name="enter_your_informations_and_we_will_send_you_the_a_link_to_reset_your_password">Enter your Informations and we will send you the a link to reset your password</string>
    <string name="phone_number">Phone Number</string>
    <string name="_555555555">555555555</string>
    <string name="Continue">Continue</string>
    <string name="register">Register</string>
    <string name="welcome_nice_to_have_you">Welcome, Nice to have you🖐</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="request"><u>Request</u></string>
    <string name="request_for_creating_account">Request for creating account?</string>
    <string name="licenseNumber">license Number</string>
    <string name="enter_your_license_number">Enter your license number</string>
    <string name="request_create_account">Request Create Account</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_email_password">Invalid email/password</string>
    <string name="your_account_is_not_approved">Your account is not approved</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="profile">Profile</string>
    <string name="Account">Account</string>


    <string-array name="country_codes">
        <item>+966</item>
        <item>+971</item>
        <item>+1</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="support_button">Support Button</string>
    <string name="notfication_button">Notfication button</string>
    <string name="welcome">Welcome,</string>
    <string name="patient">Patient</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_profile_information">Edit profile information</string>
    <string name="notifications">Notifications</string>
    <string name="on">ON</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="medical_history">Medical History</string>
    <string name="your_doctors">Your Doctors</string>
    <string name="settings">Settings</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember Me</string>
    <string name="upcoming_medicine">Upcoming Medicine 💊</string>
    <string name="alarm_clock">alarm clock</string>
    <string name="today_s_schedule">Today\'s Schedule</string>
    <string name="patients">Patients</string>
    <string name="patients_medical_histor">Patients Medical Histor</string>
    <string name="report_and_analytics">Reporst and Analytics</string>
    <string name="welcome_dr">Welcome, Dr.</string>
    <string name="meditrack">mediTrack</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="upcoming_refills">Upcoming Refills</string>
    <string name="shortcuts">ShortCuts</string>
    <string name="add_patient">Add Patient</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="show_report">Show Report</string>
    <string name="view_all_patients"><u>View all patients</u></string>
    <string name="enter_patient_email">Enter Patient Email</string>
    <string name="send_invite">Send Invite</string>
    <string name="pending_invitation">pending invitation</string>
    <string name="you_don_t_have_any_patient">You don\'t have any patient!</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_code">Medicine Code</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="days">Days</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="time">Time</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="cancel">Cancel</string>
    <string name="patient_email">Patient Email</string>
    <string name="patients_under_your_care">Patients under your care</string>
    <string name="previous_month">previous month</string>
    <string name="next_month">next month</string>
    <string name="the_scheduled_medicines">The Scheduled Medicines</string>
    <string name="view_calendar">View Calendar</string>
    <string name="calenderYearMonth">September 2025</string>
    <string name="calenderDays1">SAT\n01</string>
    <string name="calenderDays2">SUN\n02</string>
    <string name="calenderDays3">MON\n03</string>
    <string name="calenderDays4">TUE\n04</string>
    <string name="calenderDays5">WED\n05</string>
    <string name="calenderDays6">THU\n06</string>
    <string name="calenderDays7">FRI\n07</string>
    <string name="calenderDays8">SAT\n08</string>
    <string name="calenderDays9">SUN\n09</string>
    <string name="calenderDays10">MON\n10</string>
    <string name="calenderDays11">TUE\n11</string>
    <string name="calenderDays12">WED\n12</string>
    <string name="calenderDays13">THU\n13</string>
    <string name="calenderDays14">FRI\n14</string>
    <string name="calenderDays15">SAT\n15</string>
    <string name="calenderDays16">SUN\n16</string>
    <string name="calenderDays17">MON\n17</string>
    <string name="calenderDays18">TUE\n18</string>
    <string name="calenderDays19">WED\n19</string>
    <string name="calenderDays20">THU\n20</string>
    <string name="calenderDays21">FRI\n21</string>
    <string name="calenderDays22">SAT\n22</string>
    <string name="calenderDays23">SUN\n23</string>
    <string name="calenderDays24">MON\n24</string>
    <string name="calenderDays25">TUE\n25</string>
    <string name="calenderDays26">WED\n26</string>
    <string name="calenderDays27">THU\n27</string>
    <string name="calenderDays28">FRI\n28</string>
    <string name="calenderDays29">SAT\n29</string>
    <string name="calenderDays30">SUN\n30</string>
    <string name="selectedDaySchedule">23 SUNDAY</string>
    <string name="firstMedName">Amoxicillin</string>
    <string name="firstMedDose">250mg</string>
    <string name="firstMedTime">8:00 AM</string>
    <string name="secondMedTime">12:00 PM</string>
    <string name="secondMedName">Vitamin D</string>
    <string name="secondMedDose">1000UI</string>
    <string name="thirdMedTime">6:00 PM</string>
    <string name="thirdMedName">Insulin</string>
    <string name="thirdMedDose">5 Units</string>
    <string name="notification_button">Notification Button</string>
    <string name="app_logo">App Logo</string>
    <string name="calender_icon">Calender Icon</string>

</resources>