<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_soft_gradient_patient"
    android:orientation="vertical"
    tools:context=".Doctor_Activity_SignUp_Page">

    <ImageView
        android:id="@+id/arrowBackForBackPageInSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:clickable="true"
        android:focusable="true"
        android:onClick="arrowBackClicked"
        android:contentDescription="@string/arrowback"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <ImageView
        android:id="@+id/ourLogoInSignUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/contentDescription"
        app:srcCompat="@drawable/_a3c3d57b44b7902bc7eb7149393130cb5b742ad" />

    <!-- Register title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#333333"
        android:textSize="40sp"
        android:textStyle="bold" />

    <!-- Welcome text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:alpha="0.8"
        android:text="@string/welcome_nice_to_have_you"
        android:textStyle="bold" />

    <!-- First & Last Name labels -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text="@string/first_name"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text="@string/last_name"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- First & Last Name input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName"
            android:paddingStart="7dp"
            android:paddingTop="5dp"
            android:paddingEnd="7dp"
            android:paddingBottom="5dp" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:paddingStart="7dp"
            android:paddingTop="5dp"
            android:paddingEnd="7dp"
            android:paddingBottom="5dp" />

    </LinearLayout>

    <!-- Email label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/email"
        android:textStyle="bold" />

    <!-- Email input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="7dp"
        android:paddingBottom="5dp" />

    <!-- License Number label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/licenseNumber"
        android:textStyle="bold" />

    <!-- License Number input -->
    <EditText
        android:id="@+id/licenseEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="none"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/enter_your_license_number"
        android:inputType="text"
        android:paddingStart="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="7dp"
        android:paddingBottom="5dp" />

    <!-- Phone Number label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/phone_number"
        android:textStyle="bold" />

    <!-- Phone Number input -->
    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="phone"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/_555555555"
        android:inputType="phone"
        android:paddingStart="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="7dp"
        android:paddingBottom="5dp" />

    <!-- Password label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/passwordString"
        android:textStyle="bold" />

    <!-- Password input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:paddingStart="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="7dp"
        android:paddingBottom="5dp" />

    <!-- Confirm Password label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/confirm_password"
        android:textStyle="bold" />

    <!-- Confirm Password input -->
    <EditText
        android:id="@+id/rePasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/enter_password_again"
        android:inputType="textPassword"
        android:paddingStart="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="7dp"
        android:paddingBottom="5dp" />

    <!-- Loading indicator -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <!-- Request Account button -->
    <Button
        android:id="@+id/requestAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:onClick="requestClicked"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/request_create_account"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>