<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgetPasswordPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_soft_gradient_patient"
    tools:context=".Patient_Activity_ForgetPasswordPage">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/arrowBackForBackPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/arrowback"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <!-- Header Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/contentDescription"
        app:srcCompat="@drawable/vector" />

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forget"
        android:textStyle="bold"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="-10dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="40sp" />

    <!-- Subtitle -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/enter_your_informations_and_we_will_send_you_the_a_link_to_reset_your_password"
        android:textSize="15sp" />

    <!-- Email Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/email"
        android:textStyle="bold" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />

    <!-- Phone Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/phone_number"
        android:textStyle="bold" />

    <!-- Phone Input Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_edit_text"
        android:padding="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <Spinner
            android:id="@+id/countryCodeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/country_codes" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="phone"
            android:hint="@string/_555555555"
            android:inputType="phone"
            android:background="@android:color/transparent"
            android:textColor="#222"
            android:textColorHint="#B0B0B0" />
    </LinearLayout>

    <!-- Continue Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/darkBlue"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp" />

</LinearLayout>
