<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/doctorLogInPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_soft_gradient_patient"
    android:orientation="vertical"
    tools:context=".Doctor_Activity_LogInPage">

    <!-- Logo -->
    <ImageView
        android:id="@+id/ourLogoInLogInPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/contentDescription"
        app:srcCompat="@drawable/_a3c3d57b44b7902bc7eb7149393130cb5b742ad" />

    <!-- Top login switch (Patient / Doctor) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/patientLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="3dp"
            android:text="@string/patientLogin"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctorLoginPatientView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctorLogin"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground" />

            <View
                android:id="@+id/divider2"
                android:layout_width="49dp"
                android:layout_height="2.5dp"
                android:background="@drawable/divider_gradient" />
        </LinearLayout>
    </LinearLayout>

    <!-- Login Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTextMiddle"
        android:textSize="30sp"
        android:textColor="#333333"
        android:gravity="center"
        android:textStyle="bold" />

    <!-- Subtitle -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/wlcTextUnderLogin"
        android:gravity="center"
        android:alpha="0.6"
        android:textStyle="bold" />

    <!-- Error messages -->
    <TextView
        android:id="@+id/invalidEmailPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalid_email_password"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:gravity="center_horizontal"
        android:visibility="gone" />

    <TextView
        android:id="@+id/approvedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_account_is_not_approved"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:gravity="center_horizontal"
        android:visibility="gone" />

    <!-- Email Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="@string/email"
        android:textStyle="bold" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <!-- Password Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordString"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:textStyle="bold" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <!-- Remember Me + Forgot Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:id="@+id/rememberCheckBoxDoctor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remember_me" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/forgot_password"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <!-- Loading -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/loginButtonText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/darkBlue" />

    <!-- Request Account Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_for_creating_account"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/RequestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:textStyle="bold"
            android:layout_weight="1.5"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>
